--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (0.3) focal; urgency=medium
+
+  * Add default filters
+
+ -- Juanma1980 <juanma1980@gmail.com>  Fri, 23 Dec 2022 08:30:01 +0100
+
 rebost-data (0.2.2) focal; urgency=medium
 
   * Initial release 
