--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (0.3.5) focal; urgency=medium
+
+  * enable lliurex packages
+
+ -- Juanma1980 <juanma1980@gmail.com>  Wed, 14 Jun 2023 14:59:19 +0200
+
 rebost-data (0.3.4) focal; urgency=medium
 
   * Disable all but zomandos
