--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (0.3.5lliurex23) jammy; urgency=medium
+
+  * Jammy release
+
+ -- Juanma1980 <juanma1980@gmail.com>  Tue, 05 Sep 2023 13:02:45 +0200
+
 rebost-data (0.3.5) focal; urgency=medium
 
   * enable lliurex packages
