--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (0.3.6) jammy; urgency=medium
+
+  * Metada updated
+
+ -- Juanma1980 <juanma1980@gmail.com>  Wed, 25 Oct 2023 16:49:21 +0200
+
 rebost-data (0.3.5lliurex23) jammy; urgency=medium
 
   * Jammy release
