--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (0.4.2) UNRELEASED; urgency=medium
+
+  * wip
+
+ -- Juanma1980 <juanma1980@gmail.com>  Mon, 30 Oct 2023 12:16:17 +0100
+
 rebost-data (0.4.1) jammy; urgency=medium
 
   * Metadata removed
