--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-rebost-data (0.4.2) UNRELEASED; urgency=medium
+rebost-data (0.4.2) jammy; urgency=medium
 
-  * wip
+  * Adjust banned and included filters.
 
  -- Juanma1980 <juanma1980@gmail.com>  Mon, 30 Oct 2023 12:16:17 +0100
 
