--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (0.3.9) focal; urgency=medium
+
+  * Split metadata
+
+ -- Juanma1980 <juanma1980@gmail.com>  Thu, 16 Nov 2023 07:28:43 +0100
+
 rebost-data (0.3.5) focal; urgency=medium
 
   * enable lliurex packages
