--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (1.0) jammy; urgency=medium
+
+  * Add eduapps catalogue
+
+ -- Juanma1980 <juanma1980@gmail.com>  Fri, 09 Feb 2024 10:15:38 +0100
+
 rebost-data (0.4.2) jammy; urgency=medium
 
   * Adjust banned and included filters.
