--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rebost-data (0.4-2lliurex21) focal; urgency=medium
+rebost-data (0.4.2-lliurex21) focal; urgency=medium
 
   * Add map for eduapps
   * Sync with jammy
