--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (0.5.0-0lliurex21) focal; urgency=medium
+
+  * Map for focal
+
+ -- Juanma1980 <juanma1980@gmail.com>  Wed, 21 Feb 2024 07:49:33 +0100
+
 rebost-data (0.4.2-lliurex21) focal; urgency=medium
 
   * Add map for eduapps
