--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rebost-data (24.07.19-0lliurex21) jammy; urgency=medium
+rebost-data (24.07.19-0lliurex21) focal; urgency=medium
 
   * Sync with jammy
 
