--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+rebost-data (24.07.21-0lliurex23) jammy; urgency=medium
+
+  * drkonqui (crashed-processes-viewer)
+  * zero-lliurex-scratch3 (scratch-desktop-l)
+
+ -- Juanma1980 <juanma1980@gmail.com>  Wed, 24 Jul 2024 14:52:42 +0200
+
 rebost-data (24.07.19-0lliurex23) jammy; urgency=medium
 
   * idle-python
