--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (24.09.12-0lliurex23) jammy; urgency=medium
+
+  * Add codium for vscodium
+
+ -- Juanma1980 <juanma1980@gmail.com>  Thu, 12 Sep 2024 08:03:27 +0000
+
 rebost-data (24.08.01-0lliurex23) jammy; urgency=medium
 
   * Add yaml files
