--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rebost-data (24.09.17-0lliurex21) focal; urgency=medium
+
+  * Sync with jammy
+
+ -- Juanma1980 <juanma1980@gmail.com>  Thu, 19 Sep 2024 07:38:41 +0200
+
 rebost-data (24.07.19-0lliurex21) focal; urgency=medium
 
   * Sync with jammy
