--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,4 @@
 filters/* /usr/share/rebost
-llx23/* /usr/share/rebost/lists.d
-yaml /usr/share/rebost-data/
+llx25/* /usr/share/rebost/lists.d
+yaml/llx25 /usr/share/rebost-data/llx25
 
