--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rebost-data (24.09.17-0lliurex25) noble; urgency=medium
+rebost-data (25.06.12-rc0-0llx25) noble; urgency=medium
 
   * Noble release
 
